--- a/public/scss/preview.scss
+++ b/public/scss/preview.scss
@@ -3,7 +3,9 @@
   margin-top: 15px;
   position: absolute;
   top: 0;
-  left: 0;
+  left: 50%;
+  z-index: 100;
+  transform: translateX(-50%);
   width: 320px;
   height: 460px;
   .arrow{
@@ -15,11 +17,11 @@
     color: white;
     text-shadow: 0 0 10px black;
     &[id="leftarrow"] {
-      left: -20px;
+      left: 0px;
       z-index: 12;
     }
     &[id="rightarrow"] {
-      right: -20px;
+      right: 0px;
       z-index: 12;
     }
   }
